--- a/components/sass/_layout.scss
+++ b/components/sass/_layout.scss
@@ -131,6 +131,21 @@
     }
   }
 
+  //
+  // .widget {
+  //     color: blue;
+  //     font-size: 16px;
+  //     font-weight: 700;
+  //     height: 36px;
+  //     line-height: 35px;
+  //     margin-left: -10px;
+  //     padding-left: 40px;
+  //     position: relative;
+  //     text-transform: capitalize;
+  //     background: #008a9b none repeat scroll 0 0;
+  // }
+
+
 // CAPTIONS
   .carousel-caption {
     top: 24px;
@@ -156,6 +171,7 @@
 
 .subhead {
   margin-top: 44px;
+
 }
 // VDO
 .vdo {
