--- a/components/sass/_base.scss
+++ b/components/sass/_base.scss
@@ -11,9 +11,15 @@ body {
     color: #063564;
   }
   h1 {
-    font-size: 2.6rem;
-    text-transform: uppercase;
+    font-size: 3rem;
+    // font-size: 2.6rem;
+    // text-transform: uppercase;
+    font-family: 'Satisfy', cursive;
   }
+  h3 {
+
+  }
+
   @include media-breakpoint-down(sm) {
     h1 {
       font-size: 1.8rem;
@@ -28,8 +34,9 @@ body {
     font-family: 'Roboto', sans-serif;
     // color: #d3d3d3;
     color: #333;
+    font-size: 1.1rem;
     a {
-      color: #063564;
+      color: lighten(#063564, 15%);
     }
   }
   .btn, .btn-primary {
@@ -47,3 +54,54 @@ body .btn:hover, body .btn-primary:hover {
   background-color: #063564;
   color: #fff;
 }
+.event {
+  background-color: yellow;
+  // height: 100px;
+}
+.script {
+  font-family: 'Satify', cursive;
+}
+.box {
+  // max-height: 300px;
+  padding-bottom: 18px !important;
+  margin-bottom: 44px !important;
+  // width: 50%;
+  // background: linear-gradient(#fff, lighten(#00555f, 65%));
+  border-top: none;
+  border-left: none;
+  border-bottom: solid 1px #F0F0F0;
+  // border-right: solid 1px #00555f;
+}
+// THIS IS THE SUBHEAD BACKGROUND WIDGET
+.widget {
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 700;
+    height: 36px;
+    line-height: 35px;
+    margin-left: -5px;
+    padding-left: 40px;
+    position: relative;
+    text-transform: uppercase;
+    background: #008a9b none repeat scroll 0 0;
+    &::before {
+        border-bottom: 10px solid transparent;
+        border-left: 10px solid transparent;
+        bottom: -10px;
+        content: "";
+        height: 0;
+        left: -10px;
+        position: absolute;
+        width: 0;
+        border-right: 10px solid #00555f;
+      }
+    &::after {
+        background: rgba(0, 0, 0, 0) repeat scroll 0 0;
+        content: "";
+        height: 36px;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 4px;
+      }
+  }
